--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,9 @@
   ],
   "devDependencies": {
     "qunit": "~1.14.0"
+  },
+  "dependencies": {
+    "visibilityjs": "~1.2.1",
+    "brwsrfy-metrics": "*"
   }
 }
