--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,6 @@
   "dependencies": {
     "visibilityjs": "~1.2.1",
     "brwsrfy-metrics": "*",
-    "againjs": "theborakompanioni/againjs"
+    "againjs": "theborakompanioni/againjs#master"
   }
 }
