--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "tests"
   ],
   "devDependencies": {
-    "qunit": "~1.14.0"
+    "qunit": "~1.14.0",
+    "jasmine": "~2.0.0"
   },
   "dependencies": {
     "visibilityjs": "~1.2.1",
