--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "name": "tbk"
   },
   "scripts": {
-      "test": "grunt default --verbose"
+    "test": "grunt default --verbose"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-connect": "~0.8.0",
-    "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-qunit": "*"
+    "grunt-contrib-qunit": "*",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "time-grunt": "^0.3.2"
   }
 }
