--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
+    "bower": "1.3.8",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-concat": "~0.4.0",
@@ -20,6 +21,15 @@
     "grunt-contrib-jasmine": "~0.6.5",
     "grunt-template-jasmine-istanbul": "0.3.0",
     "time-grunt": "~0.4.0",
-    "grunt-notify": "~0.3.0"
+    "grunt-notify": "~0.3.0",
+    "karma": "~0.12.17",
+    "karma-jasmine": "~0.2.2",
+    "karma-cli": "0.0.4",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-ie-launcher": "~0.1.5",
+    "karma-opera-launcher": "~0.1.0",
+    "karma-safari-launcher": "~0.1.1",
+    "grunt-karma": "~0.8.3"
   }
 }
