added some specs; installing jasmine-jquery nnow

--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
   ],
   "devDependencies": {
     "qunit": "~1.14.0",
-    "jasmine": "~2.0.0"
+    "jasmine": "~2.0.0",
+    "lodash": "~2.4.1",
+    "jquery": "~2.1.1"
   },
   "dependencies": {
     "visibilityjs": "~1.2.1",
