--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-opera-launcher": "~0.1.0",
     "karma-safari-launcher": "~0.1.1",
     "grunt-karma": "~0.8.3",
-    "grunt-bump": "0.0.14"
+    "grunt-bump": "0.0.14",
+    "jasmine-jquery": "~1.3.3"
   }
 }
