--- a/bower.json
+++ b/bower.json
@@ -23,10 +23,11 @@
     "**/.*"
   ],
   "devDependencies": {
-    "qunit": "~1.14.0",
-    "jasmine": "~2.0.0",
-    "lodash": "~2.4.1",
-    "jquery": "~2.1.1"
+    "qunit": "1.14.0",
+    "jasmine": "2.0.0",
+    "lodash": "2.4.1",
+    "jquery": "2.1.1",
+    "jasmine-jquery": "velesin/jasmine-jquery#2.0.5"
   },
   "dependencies": {
     "visibilityjs": "~1.2.1",
