--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-qunit": "*",
-    "grunt-contrib-jasmine": "~0.6.5",
-    "grunt-template-jasmine-istanbul": "0.3.0",
     "time-grunt": "~0.4.0",
     "grunt-notify": "~0.3.0",
     "karma": "~0.12.17",
@@ -32,6 +30,6 @@
     "karma-safari-launcher": "~0.1.1",
     "grunt-karma": "~0.8.3",
     "grunt-bump": "0.0.14",
-    "jasmine-jquery": "~1.3.3"
+    "karma-coverage": "~0.2.4"
   }
 }
