--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "karma-safari-launcher": "~0.1.1",
     "grunt-karma": "~0.8.3",
     "grunt-bump": "0.0.14",
-    "karma-coverage": "~0.2.4"
+    "karma-coverage": "~0.2.4",
+    "karma-spec-reporter": "0.0.13"
   }
 }
