--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-jasmine": "~0.6.5",
+    "grunt-template-jasmine-istanbul": "0.3.1",
     "grunt-contrib-qunit": "*",
     "time-grunt": "~0.4.0",
     "grunt-notify": "~0.3.0",
