--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vissense",
-  "version": "0.0.3",
+  "version": "0.1.0-rc1",
   "title": "VisSense.js",
   "author": {
     "name": "tbk"
