--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,6 @@
   "license": "MIT",
   "private": true,
   "ignore": [
-    "coverage",
     "spec",
     "bower_components",
     "node_modules",
@@ -21,11 +20,12 @@
     "package.json",
     "bower.json",
     "src/test",
+    "dist/coverage",
     "**/.*"
   ],
   "devDependencies": {
     "qunit": "1.14.0",
-    "jasmine": "2.0.0",
+    "jasmine": "2.0.1",
     "lodash": "2.4.1",
     "jquery": "2.1.1",
     "jasmine-jquery": "velesin/jasmine-jquery#2.0.5"
