--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.5",
-    "bower": "1.3.8",
+    "bower": "1.3.9",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-concat": "~0.5.0",
@@ -19,10 +19,10 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-jasmine": "~0.7.0",
     "grunt-template-jasmine-istanbul": "0.3.1",
-    "grunt-contrib-qunit": "*",
+    "grunt-contrib-qunit": "0.5.2",
     "time-grunt": "~0.4.0",
-    "grunt-notify": "~0.3.0",
-    "karma": "~0.12.19",
+    "grunt-notify": "~0.3.1",
+    "karma": "~0.12.22",
     "karma-jasmine": "~0.2.2",
     "karma-cli": "0.0.4",
     "karma-chrome-launcher": "~0.1.4",
@@ -32,7 +32,8 @@
     "karma-safari-launcher": "~0.1.1",
     "grunt-karma": "~0.8.3",
     "grunt-bump": "0.0.15",
-    "karma-coverage": "~0.2.5",
-    "karma-spec-reporter": "0.0.13"
+    "karma-coverage": "~0.2.6",
+    "karma-spec-reporter": "0.0.13",
+    "grunt-contrib-clean": "~0.6.0"
   }
 }
