--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "vissense",
-  "version": "0.1.0-rc1",
+  "version": "0.1.0",
   "homepage": "https://example.com",
   "authors": [
     "tbk"
