--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-bump": "0.0.15",
     "karma-coverage": "~0.2.6",
     "karma-spec-reporter": "0.0.13",
-    "grunt-contrib-clean": "~0.6.0"
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-coveralls": "~1.0.0"
   }
 }
