--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-coveralls": "~1.0.0",
     "grunt-karma": "~0.9.0",
+    "grunt-micro": "^0.1.0",
     "grunt-notify": "~0.3.1",
     "grunt-template-jasmine-istanbul": "0.3.1",
     "karma": "~0.12.23",
