--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.5",
     "bower": "1.3.12",
-    "grunt-contrib-connect": "~0.8.0",
-    "grunt-contrib-watch": "~0.6.1",
+    "grunt": "~0.4.5",
+    "grunt-bump": "0.0.15",
+    "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-connect": "~0.8.0",
     "grunt-contrib-jasmine": "~0.7.0",
-    "grunt-template-jasmine-istanbul": "0.3.1",
-    "time-grunt": "~1.0.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-coveralls": "~1.0.0",
+    "grunt-docular": "0.1.5",
+    "docular": "0.8.7",
+    "grunt-karma": "~0.9.0",
     "grunt-notify": "~0.3.1",
+    "grunt-template-jasmine-istanbul": "0.3.1",
     "karma": "~0.12.23",
-    "karma-jasmine": "~0.2.2",
-    "karma-cli": "0.0.4",
     "karma-chrome-launcher": "~0.1.4",
+    "karma-cli": "0.0.4",
+    "karma-coverage": "~0.2.6",
     "karma-firefox-launcher": "~0.1.3",
     "karma-ie-launcher": "~0.1.5",
+    "karma-jasmine": "~0.2.2",
     "karma-opera-launcher": "~0.1.0",
     "karma-safari-launcher": "~0.1.1",
-    "grunt-karma": "~0.9.0",
-    "grunt-bump": "0.0.15",
-    "karma-coverage": "~0.2.6",
     "karma-spec-reporter": "0.0.13",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-coveralls": "~1.0.0"
+    "time-grunt": "~1.0.0"
   }
 }
