--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "bower": "1.3.12",
+    "bower": "~1.3.12",
     "docular": "0.8.7",
     "grunt": "~0.4.5",
-    "grunt-bump": "0.0.15",
+    "grunt-bump": "0.0.16",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "~0.8.0",
-    "grunt-contrib-jasmine": "~0.7.0",
+    "grunt-contrib-jasmine": "~0.8.1",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-coveralls": "~1.0.0",
     "grunt-docular": "0.1.5",
