added saucelabs integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .DS_Store
 *.log
 *.iml
-.idea
-node_modules
-bower_components
-dist/coverage
-dist/docs
-.coveralls.yml
-tmp
+.idea/
+
+node_modules/
+bower_components/
+
+.sauce.json
+
+dist/coverage/
+dist/docs/
+tmp/
