--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "tbk"
   },
   "scripts": {
-    "test": "grunt default --verbose"
+    "test": "grunt default --verbose && karma start karma-saucelabs.conf.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "bower": "~1.3.12",
     "docular": "0.8.13",
+    "fs": "0.0.2",
     "grunt": "~0.4.5",
     "grunt-bump": "0.0.16",
     "grunt-contrib-clean": "~0.6.0",
@@ -30,6 +31,7 @@
     "grunt-karma": "~0.9.0",
     "grunt-micro": "^0.1.0",
     "grunt-notify": "~0.4.1",
+    "grunt-saucelabs": "^8.4.1",
     "grunt-template-jasmine-istanbul": "0.3.1",
     "grunt-umd": "^2.2.1",
     "karma": "~0.12.28",
@@ -42,8 +44,10 @@
     "karma-opera-launcher": "~0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "~0.1.1",
+    "karma-sauce-launcher": "^0.2.10",
     "karma-spec-reporter": "0.0.13",
     "phantomjs": "^1.9.12",
+    "request": "^2.51.0",
     "time-grunt": "~1.0.0"
   }
 }
