.travis.yml: npm run-script citest

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,7 @@ before_script:
   - 'npm install -g karma-cli'
   - 'npm install -g bower'
   - 'bower install'
+script:
+  - 'npm run-script citest'
 after_success:
   - 'grunt coverage'
