travis: run "npm run-script test"

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
   - 'npm install -g bower'
   - 'bower install'
 script:
+  - 'npm run-script test'
   - 'npm run-script citest'
 after_success:
   - 'grunt coverage'
