--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ sudo: false
 language: node_js
 node_js:
   - '0.10'
+cache:
+  directories:
+    - node_modules
+    - bower_components
 before_install:
   - 'export CHROME_BIN=chromium-browser'
   - 'export DISPLAY=:99.0'
