--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,8 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.js]
+max_line_length = 80
+
 [*.md]
 trim_trailing_whitespace = false
