--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "vissense",
   "version": "0.2.1",
   "title": "VisSense.js",
+  "homepage": "https://vissense.github.io/vissense",
   "author": {
     "name": "tbk"
   },
   "scripts": {
     "test": "grunt default --verbose",
     "citest": "karma start karma-saucelabs.conf.js"
+  },
+  "bugs": {
+    "url": "https://github.com/vissense/vissense/issues"
   },
   "repository": {
     "type": "git",
@@ -28,13 +32,15 @@
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-coveralls": "~1.0.0",
-    "grunt-docular": "0.1.5",
+    "grunt-jsdoc": "0.5.7",
+    "jsdoc": "3.2.2",
     "grunt-karma": "~0.9.0",
     "grunt-micro": "^0.1.0",
     "grunt-notify": "~0.4.1",
     "grunt-saucelabs": "^8.4.1",
     "grunt-template-jasmine-istanbul": "0.3.1",
     "grunt-umd": "^2.2.1",
+    "jaguarjs-jsdoc": "git://github.com/davidshimjs/jaguarjs-jsdoc",
     "karma": "~0.12.28",
     "karma-chrome-launcher": "~0.1.7",
     "karma-cli": "0.0.4",
