--- a/package.json
+++ b/package.json
@@ -28,33 +28,33 @@
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "~0.9.0",
-    "grunt-contrib-jasmine": "~0.8.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-jasmine": "~0.8.2",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-coveralls": "~1.0.0",
     "grunt-jsdoc": "0.5.7",
-    "grunt-karma": "~0.9.0",
+    "grunt-karma": "~0.10.1",
     "grunt-micro": "^0.1.0",
     "grunt-notify": "~0.4.1",
-    "grunt-saucelabs": "^8.4.1",
-    "grunt-template-jasmine-istanbul": "0.3.1",
+    "grunt-saucelabs": "^8.5.0",
+    "grunt-template-jasmine-istanbul": "0.3.2",
     "grunt-umd": "^2.2.1",
     "jaguarjs-jsdoc": "git://github.com/davidshimjs/jaguarjs-jsdoc",
-    "jsdoc": "3.2.2",
-    "karma": "~0.12.28",
+    "jsdoc": "3.3.0-beta1",
+    "karma": "~0.12.31",
     "karma-chrome-launcher": "~0.1.7",
     "karma-cli": "0.0.4",
     "karma-coverage": "~0.2.7",
-    "karma-firefox-launcher": "~0.1.3",
+    "karma-firefox-launcher": "~0.1.4",
     "karma-ie-launcher": "~0.1.5",
-    "karma-jasmine": "~0.3.2",
+    "karma-jasmine": "~0.3.5",
     "karma-opera-launcher": "~0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "~0.1.1",
     "karma-sauce-launcher": "^0.2.10",
-    "karma-spec-reporter": "0.0.13",
-    "phantomjs": "^1.9.12",
+    "karma-spec-reporter": "0.0.16",
+    "phantomjs": "^1.9.13",
     "request": "^2.51.0",
     "time-grunt": "~1.0.0"
   }
