--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "vissense",
-  "version": "0.3.0",
+  "version": "0.4.0-rc1",
   "license": "MIT",
   "main": "dist/vissense.min.js",
   "description": "",
