add *.conf.js and *.conf.json to bower ignore

--- a/bower.json
+++ b/bower.json
@@ -20,12 +20,12 @@
     "templates",
     "docs",
     "Gruntfile.js",
-    "karma.conf.js",
-    "karma-saucelabs.conf.js",
     "SpecRunner.html",
     "package.json",
     "bower.json",
     "dist/coverage",
+    "*.conf.js",
+    "*.conf.json",
     "**/.*"
   ],
   "devDependencies": {
