--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vissense",
-  "version": "0.4.0-rc1",
+  "version": "0.4.0",
   "title": "VisSense.js",
   "homepage": "https://vissense.github.io/vissense",
   "author": {
@@ -21,24 +21,23 @@
   "devDependencies": {
     "bower": "1.3.12",
     "grunt": "0.4.5",
-    "grunt-bump": "0.0.17",
+    "grunt-bump": "0.3.0",
     "grunt-complexity": "0.3.0",
     "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-concat": "0.5.0",
+    "grunt-contrib-concat": "0.5.1",
     "grunt-contrib-connect": "0.9.0",
     "grunt-contrib-jasmine": "0.8.2",
     "grunt-contrib-jshint": "0.11.0",
-    "grunt-contrib-uglify": "0.7.0",
+    "grunt-contrib-uglify": "0.8.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-coveralls": "1.0.0",
-    "grunt-jsdoc": "0.5.7",
+    "grunt-jsdoc": "0.5.8",
     "grunt-karma": "0.10.1",
     "grunt-micro": "0.1.0",
     "grunt-notify": "0.4.1",
-    "grunt-saucelabs": "8.5.0",
+    "grunt-saucelabs": "8.6.0",
     "grunt-template-jasmine-istanbul": "0.3.3",
-    "grunt-umd": "2.2.1",
-    "jaguarjs-jsdoc": "davidshimjs/jaguarjs-jsdoc#f423054",
+    "grunt-umd": "2.3.2",
     "jsdoc": "3.3.0-beta1",
     "karma": "0.12.31",
     "karma-chrome-launcher": "0.1.7",
@@ -52,7 +51,7 @@
     "karma-safari-launcher": "0.1.1",
     "karma-sauce-launcher": "0.2.10",
     "karma-spec-reporter": "0.0.16",
-    "phantomjs": "1.9.15",
-    "time-grunt": "1.0.0"
+    "phantomjs": "1.9.16",
+    "time-grunt": "1.1.0"
   }
 }
