--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "vissense",
-  "version": "0.8.3",
+  "version": "0.9.0-alpha1",
   "license": "MIT",
   "main": "dist/vissense.min.js",
   "description": "A utility library for observing visibility changes of DOM elements.",
