--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vissense",
-  "version": "0.8.3",
+  "version": "0.9.0-alpha1",
   "title": "VisSense.js",
   "homepage": "https://vissense.github.io/vissense",
   "license": "MIT",
