--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "main": "dist/vissense.min.js",
   "dependencies": {},
   "devDependencies": {
+    "browserify": "^12.0.1",
+    "browserify-shim": "^3.8.11",
     "grunt": "0.4.5",
     "grunt-bump": "0.7.0",
     "grunt-complexity": "0.3.0",
@@ -41,6 +43,7 @@
     "grunt-umd": "2.3.5",
     "jsdoc": "3.3.2",
     "karma": "0.13.17",
+    "karma-browserify": "^4.4.2",
     "karma-chrome-launcher": "0.2.2",
     "karma-coverage": "0.5.3",
     "karma-firefox-launcher": "0.1.7",
@@ -53,5 +56,8 @@
     "karma-spec-reporter": "0.0.23",
     "phantomjs": "1.9.19",
     "time-grunt": "1.3.0"
+  },
+  "browserify-shim": {
+    "external": "global:External"
   }
 }
