--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "browserify-shim": "^3.8.11",
+    "browserify": "^13.0.0",
+    "browserify-shim": "^3.8.12",
     "grunt": "0.4.5",
     "grunt-bump": "0.7.0",
     "grunt-complexity": "0.3.0",
@@ -46,15 +46,16 @@
     "grunt-contrib-uglify": "0.11.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-coveralls": "1.0.0",
-    "grunt-jsdoc": "0.6.8",
+    "grunt-jsdoc": "^1.1.0",
     "grunt-karma": "0.12.1",
     "grunt-micro": "0.1.0",
     "grunt-notify": "0.4.3",
     "grunt-saucelabs": "8.6.2",
     "grunt-template-jasmine-istanbul": "0.4.0",
     "grunt-umd": "2.3.5",
-    "jsdoc": "3.3.2",
-    "karma": "0.13.17",
+    "ink-docstrap": "^1.1.0",
+    "jsdoc": "^3.4.0",
+    "karma": "^0.13.19",
     "karma-browserify": "^4.4.2",
     "karma-chrome-launcher": "0.2.2",
     "karma-coverage": "0.5.3",
@@ -62,7 +63,7 @@
     "karma-ie-launcher": "0.2.0",
     "karma-jasmine": "0.3.6",
     "karma-opera-launcher": "0.3.0",
-    "karma-phantomjs-launcher": "0.2.2",
+    "karma-phantomjs-launcher": "^0.2.3",
     "karma-safari-launcher": "0.1.1",
     "karma-sauce-launcher": "0.3.0",
     "karma-spec-reporter": "0.0.23",
