--- a/package.json
+++ b/package.json
@@ -21,37 +21,41 @@
     "src"
   ],
   "devDependencies": {
-    "babel": "^5.8.3",
-    "babel-core": "^5.8.3",
-    "babel-eslint": "^4.1.4",
-    "babel-loader": "^5.3.3",
-    "chai": "^3.2.0",
-    "coveralls": "^2.11.4",
-    "eslint": "^1.4.1",
-    "eslint-plugin-babel": "^2.1.1",
-    "husky": "^0.10.1",
-    "isparta": "^3.5.1",
-    "karma": "^0.13.14",
-    "karma-fixture": "file:node_modules/karma-fixture",
-    "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-sinon-chai": "^1.1.0",
-    "karma-spec-reporter": "0.0.18",
-    "karma-webpack": "^1.5.0",
-    "mocha": "^2.3.3",
-    "mocha-lcov-reporter": "^1.0.0",
+    "babel-core": "6.4.5",
+    "babel-eslint": "4.1.4",
+    "babel-loader": "6.2.2",
+    "babel-plugin-add-module-exports": "0.1.2",
+    "babel-preset-es2015": "6.9.0",
+    "chai": "3.2.0",
+    "coveralls": "2.11.4",
+    "eslint": "1.4.1",
+    "eslint-plugin-babel": "3.1.0",
+    "husky": "0.10.1",
+    "isparta": "4.0.0",
+    "karma": "0.13.14",
+    "karma-chai": "0.1.0",
+    "karma-fixture": "0.2.6",
+    "karma-html2js-preprocessor": "1.0.0",
+    "karma-mocha": "0.2.1",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-sinon-chai": "1.1.0",
+    "karma-spec-reporter": "0.0.23",
+    "karma-webpack": "1.5.0",
+    "mocha": "2.3.3",
+    "mocha-lcov-reporter": "1.0.0",
     "phantomjs-polyfill": "0.0.1",
-    "rimraf": "^2.4.3",
-    "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0",
-    "webpack": "^1.12.2"
+    "phantomjs-prebuilt": "2.1.3",
+    "rimraf": "2.4.3",
+    "sinon": "1.17.2",
+    "sinon-chai": "2.8.0",
+    "webpack": "1.12.2"
   },
   "author": {
     "name": "theborakompanioni",
     "email": "theborakompanioni+github@gmail.com"
   },
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=5.0.0"
   },
   "license": "MIT",
   "dependencies": {}
