--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
   - 'npm install -g karma-cli'
   - 'npm install -g webpack'
   - 'npm install'
+  - 'karma --version'
 script:
   - 'npm run test-browser'
   - 'npm run build'
