--- a/package.json
+++ b/package.json
@@ -21,34 +21,34 @@
     "src"
   ],
   "devDependencies": {
-    "babel-core": "6.4.5",
+    "babel-core": "^6.11.4",
     "babel-eslint": "4.1.4",
     "babel-loader": "6.2.2",
     "babel-plugin-add-module-exports": "0.1.2",
     "babel-preset-es2015": "6.9.0",
-    "chai": "3.2.0",
-    "coveralls": "2.11.4",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.11",
     "eslint": "1.4.1",
-    "eslint-plugin-babel": "3.1.0",
+    "eslint-plugin-babel": "^3.3.0",
     "husky": "0.10.1",
     "isparta": "4.0.0",
-    "karma": "0.13.14",
+    "karma": "0.13.22",
     "karma-chai": "0.1.0",
     "karma-fixture": "0.2.6",
     "karma-html2js-preprocessor": "1.0.0",
     "karma-mocha": "0.2.1",
-    "karma-phantomjs-launcher": "1.0.0",
-    "karma-sinon-chai": "1.1.0",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sinon-chai": "^1.2.3",
     "karma-spec-reporter": "0.0.23",
-    "karma-webpack": "1.5.0",
-    "mocha": "2.3.3",
-    "mocha-lcov-reporter": "1.0.0",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.5.3",
+    "mocha-lcov-reporter": "^1.2.0",
     "phantomjs-polyfill": "0.0.1",
-    "phantomjs-prebuilt": "2.1.3",
-    "rimraf": "2.4.3",
-    "sinon": "1.17.2",
+    "phantomjs-prebuilt": "^2.1.8",
+    "rimraf": "^2.5.4",
+    "sinon": "^1.17.5",
     "sinon-chai": "2.8.0",
-    "webpack": "1.12.2"
+    "webpack": "^1.13.1"
   },
   "author": {
     "name": "theborakompanioni",
